GRAD2-3270 - adds schoolCategoryCode parameter to school search endpoint (#418)